--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.5.2",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -11,7 +13,11 @@
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.26.1",
     "bootstrap": "4.6",
+    "javascript-time-ago": "^2.3.13",
+    "moment": "^2.29.1",
+    "mui-datatables": "^3.8.5",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
@@ -21,12 +27,14 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-lazyload": "^3.2.0",
     "react-loader-spinner": "^5.1.0",
+    "react-quill": "^1.3.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
-    "slick-carousel": "^1.8.1",
     "react-slick": "^0.28.1",
+    "react-toastify": "^8.2.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -55,6 +63,8 @@
     ]
   },
   "devDependencies": {
+    "@mui/material": "^5.2.1",
+    "@types/mui-datatables": "^3.7.8",
     "@types/react-lazyload": "^3.1.1",
     "@types/react-slick": "^0.23.8",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
