--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.1",
     "bootstrap": "4.6",
     "javascript-time-ago": "^2.3.13",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "mui-datatables": "^3.8.5",
     "node-sass": "^7.0.1",
