--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.1",
     "bootstrap": "4.6",
+    "chart.js": "^3.7.1",
     "javascript-time-ago": "^2.3.13",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "mui-datatables": "^3.8.5",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.23.0",
     "react-icons": "^4.3.1",
