--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.0",
     "react-chartjs-2": "^4.0.1",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.23.0",
     "react-icons": "^4.3.1",
