--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.8.2",
     "@mui/material": "^5.5.2",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.2",
@@ -33,14 +35,17 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-lazyload": "^3.2.0",
     "react-loader-spinner": "^5.1.0",
+    "react-lottie": "^1.2.3",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scrollable-feed": "^1.3.1",
     "react-select": "^5.2.2",
     "react-slick": "^0.28.1",
     "react-toastify": "^8.2.0",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.5.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
@@ -72,6 +77,7 @@
     "@mui/material": "^5.2.1",
     "@types/mui-datatables": "^3.7.8",
     "@types/react-lazyload": "^3.1.1",
+    "@types/react-lottie": "^1.2.6",
     "@types/react-slick": "^0.23.8",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
