--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "javascript-time-ago": "^2.3.13",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "lottie-react": "^2.3.1",
     "moment": "^2.29.1",
     "mui-datatables": "^3.8.5",
     "node-sass": "^7.0.1",
@@ -35,7 +36,6 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-lazyload": "^3.2.0",
     "react-loader-spinner": "^5.1.0",
-    "react-lottie": "^1.2.3",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
@@ -77,7 +77,6 @@
     "@mui/material": "^5.2.1",
     "@types/mui-datatables": "^3.7.8",
     "@types/react-lazyload": "^3.1.1",
-    "@types/react-lottie": "^1.2.6",
     "@types/react-slick": "^0.23.8",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
