--- a/package.json
+++ b/package.json
@@ -11,11 +11,6 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/jwt-decode": "^3.1.0",
-    "@types/node": "^16.11.26",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
     "axios": "^0.26.1",
     "bootstrap": "4.6",
     "chart.js": "^3.7.1",
@@ -50,7 +45,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --max_old_space_size=8128 start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -74,6 +69,11 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/jwt-decode": "^3.1.0",
+    "@types/node": "^16.11.26",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "@mui/material": "^5.2.1",
     "@types/mui-datatables": "^3.7.8",
     "@types/react-lazyload": "^3.1.1",
