--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-chartjs-2": "^4.2.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.23.0",
     "react-icons": "^4.3.1",
     "react-infinite-scroll-component": "^6.1.0",
@@ -69,13 +70,14 @@
     ]
   },
   "devDependencies": {
+    "@mui/material": "^5.2.1",
     "@types/jest": "^27.4.1",
     "@types/jwt-decode": "^3.1.0",
+    "@types/mui-datatables": "^3.7.8",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
-    "@mui/material": "^5.2.1",
-    "@types/mui-datatables": "^3.7.8",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-lazyload": "^3.1.1",
     "@types/react-slick": "^0.23.8",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
