--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-lazyload": "^3.2.0",
     "react-loader-spinner": "^5.1.0",
-    "react-quill": "^1.3.5",
+    "react-quill": "^2.0.0-beta.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
